[gd_scene load_steps=35 format=3 uid="uid://tk4knbr2874b"]

[ext_resource type="Script" path="res://scenes/menus/main.gd" id="1_nmrig"]
[ext_resource type="Texture2D" uid="uid://dl76pcmtqb0ki" path="res://assets/logo.png" id="1_tm7fq"]
[ext_resource type="PackedScene" uid="uid://ddqyib5see4y4" path="res://prefabs/levels/star_bg.tscn" id="1_x8100"]
[ext_resource type="Shader" path="res://scripts/shader/sine.gdshader" id="2_qivwk"]
[ext_resource type="FontFile" uid="uid://bekduwya877th" path="res://font/font0.ttf" id="4_5jy7t"]
[ext_resource type="Texture2D" uid="uid://2p5c7mxud2ye" path="res://assets/menus/mainmenu_icon_sheet.png" id="4_uqeoc"]
[ext_resource type="Theme" uid="uid://bywcojmitspgu" path="res://default_theme.tres" id="6_eqjus"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vo0el"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 3.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 0.0
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5y5un"]
atlas = ExtResource("1_tm7fq")
region = Rect2(8, 5, 16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e5k8j"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 3.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 0.4
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1tibp"]
atlas = ExtResource("1_tm7fq")
region = Rect2(24, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vkqg7"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 0.8
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2dp1x"]
atlas = ExtResource("1_tm7fq")
region = Rect2(32, 5, 8, 16)

[sub_resource type="Shader" id="Shader_gspoa"]
code = "shader_type canvas_item;

uniform float height = 2.0;
uniform float height_frequency = 3.0;
uniform float height_offset = 0.0;

uniform float width = 0.0;
uniform float width_frequency = 0.0;
uniform float width_offset = 0.0;

void vertex() {
	VERTEX.y += height * sin((TIME * height_frequency) + height_offset);
	VERTEX.x += width * sin((TIME * width_frequency) + width_offset);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ayjt8"]
shader = SubResource("Shader_gspoa")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 1.2
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_p6orl"]
atlas = ExtResource("1_tm7fq")
region = Rect2(40, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hdona"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 1.6
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2ctx7"]
atlas = ExtResource("1_tm7fq")
region = Rect2(48, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3rehn"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 2.0
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0klh2"]
atlas = ExtResource("1_tm7fq")
region = Rect2(56, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jku50"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 2.4
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l24vh"]
atlas = ExtResource("1_tm7fq")
region = Rect2(64, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jbpr7"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 2.8
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_osum8"]
atlas = ExtResource("1_tm7fq")
region = Rect2(72, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tes4b"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 3.2
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1t8fw"]
atlas = ExtResource("1_tm7fq")
region = Rect2(80, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_temn8"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 3.6
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2rhwq"]
atlas = ExtResource("1_tm7fq")
region = Rect2(88, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gvv73"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 4.0
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dojdm"]
atlas = ExtResource("1_tm7fq")
region = Rect2(96, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c31av"]
shader = SubResource("Shader_gspoa")
shader_parameter/height = 2.0
shader_parameter/height_frequency = 9.0
shader_parameter/height_offset = 4.4
shader_parameter/width = 0.0
shader_parameter/width_frequency = 0.0
shader_parameter/width_offset = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4741c"]
atlas = ExtResource("1_tm7fq")
region = Rect2(104, 5, 8, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_02rp2"]
shader = ExtResource("2_qivwk")
shader_parameter/height = 1.0
shader_parameter/height_frequency = 10.0
shader_parameter/height_offset = 0.0
shader_parameter/width = 1.0
shader_parameter/width_frequency = 10.0
shader_parameter/width_offset = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dpsf7"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_nmrig")

[node name="StarBG" parent="." instance=ExtResource("1_x8100")]

[node name="LogoTriangle" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vo0el")
position = Vector2(88, 24)
texture = SubResource("AtlasTexture_5y5un")

[node name="Letter1" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_e5k8j")
position = Vector2(12, 0)
texture = SubResource("AtlasTexture_1tibp")

[node name="Letter2" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_vkqg7")
position = Vector2(20, 0)
texture = SubResource("AtlasTexture_2dp1x")

[node name="Letter3" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_ayjt8")
position = Vector2(28, 0)
texture = SubResource("AtlasTexture_p6orl")

[node name="Letter4" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_hdona")
position = Vector2(36, 0)
texture = SubResource("AtlasTexture_2ctx7")

[node name="Letter5" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_3rehn")
position = Vector2(44, 0)
texture = SubResource("AtlasTexture_0klh2")

[node name="Letter6" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_jku50")
position = Vector2(52, 0)
texture = SubResource("AtlasTexture_l24vh")

[node name="Letter7" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_jbpr7")
position = Vector2(60, 0)
texture = SubResource("AtlasTexture_osum8")

[node name="Letter8" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_tes4b")
position = Vector2(68, 0)
texture = SubResource("AtlasTexture_1t8fw")

[node name="Letter9" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_temn8")
position = Vector2(76, 0)
texture = SubResource("AtlasTexture_2rhwq")

[node name="Letter10" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_gvv73")
position = Vector2(84, 0)
texture = SubResource("AtlasTexture_dojdm")

[node name="Letter11" type="Sprite2D" parent="LogoTriangle"]
material = SubResource("ShaderMaterial_c31av")
position = Vector2(92, 0)
texture = SubResource("AtlasTexture_4741c")

[node name="Origin" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 104.0
offset_top = 60.0
offset_right = 161.0
offset_bottom = 116.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="Icon" type="Sprite2D" parent="Origin"]
material = SubResource("ShaderMaterial_02rp2")
texture = ExtResource("4_uqeoc")
vframes = 4

[node name="StartButton" type="Button" parent="Origin"]
layout_mode = 2
offset_left = 8.0
offset_top = -4.0
offset_right = 45.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("4_5jy7t")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_dpsf7")
text = "Start"
alignment = 0

[node name="OptionButton" type="Button" parent="Origin"]
layout_mode = 2
offset_left = 8.0
offset_top = 12.0
offset_right = 52.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("4_5jy7t")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_dpsf7")
text = "Options"
alignment = 0

[node name="ExtrasButton" type="Button" parent="Origin"]
layout_mode = 2
offset_left = 8.0
offset_top = 27.0
offset_right = 52.0
offset_bottom = 36.0
theme = ExtResource("6_eqjus")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("4_5jy7t")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_dpsf7")
text = "Extras"
alignment = 0

[node name="ExitButton" type="Button" parent="Origin"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
offset_left = 8.0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("4_5jy7t")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_dpsf7")
text = "Exit
"
alignment = 0
